--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -5,7 +5,7 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 
 # Latest updates
 
-*Last updated 26 February 2025*
+*Last updated 25 March 2025*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
 Keep up with the latest and greatest from Qiskit and IBM Quantum&reg;! Gathered here are the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
@@ -49,22 +49,26 @@ Explore the [v1.3 release notes](/api/qiskit/release-notes/1.3), and read about 
 
 {/* use url format /api/qiskit/release-notes/X.X to link to the specific X.X version of the release notes */}
 
-### Qiskit Runtime client 0.28.0
+### Qiskit Runtime client 0.37.0
 
 *To see the release notes for all versions, visit the [Qiskit Runtime client release notes](/api/qiskit-ibm-runtime/release-notes).*
 
-**Highlights from the 0.28.0 (2024-08-15) version release**
+**Highlights from the 0.37.0 (13 March 2025) version release**
 
-#### Removal
+#### Deprecation
 
-- The V1 primitives `SamplerV1` and `EstimatorV1` have been completely removed. Refer to the [migration guide](/migration-guides/v2-primitives) for instructions on migrating to V2 primitives.
-- The `service` parameter is now required in `Session.from_id()`.
+The `IBMBackend` attributes `max_shots` and `max_experiments`, as well as the property `max_circuits` have all been deprecated. Previously, these attribute values represented the maximum number of shots and circuits that could be submitted in one job. See [job limits](/guides/job-limits#job-limits) for details.
 
 #### New features
 
-- You can now use the `layer_noise_model` option in `ResilienceOptionsV2` to pass in a noise model. When this field is set, all the mitigation strategies that require noise data skip the noise learning stage, and instead gather the required information from `layer_noise_model`. You can use the [NoiseLearner](/api/qiskit-ibm-runtime/noise-learner-noise-learner) class to learn noise and use it in a subsequent `Estimator` call.
+qiskit-ibm-runtime is now compatible with Qiskit v2.0. This means that classes and methods removed in Qiskit v2.0 have also been removed or handled accordingly.  The `pulse` and `channel` related changes are highlighted in the following list. See the [Pulse migration guide](/migration-guides/pulse-migration) for details.
 
-See the full [0.28.0 release notes](/api/qiskit-ibm-runtime/release-notes#0280-2024-08-15).
+   - `Channel` methods in `IBMBackend` have been removed.
+   - The backend configuration class `PulseBackendConfiguration` has been removed, so all backends will now be returned as `QasmBackendConfiguration`.
+   - `PulseDefaults` (backend defaults) can still be retrieved but they are no longer necessary when creating a backend `Target`.
+
+
+See the full [0.37.0 release notes](/api/qiskit-ibm-runtime/release-notes#0370-2025-03-13).
 {/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
 
 ### Qiskit Transpiler Service client v0.3.0
@@ -86,6 +90,40 @@ Premium Plan users can get started right away with the IBM&reg; Circuit function
 ## Qiskit Runtime service updates
 
 This summary of the latest changes to the Qiskit Runtime service applies to anyone using Qiskit Runtime, regardless of how you communicate with the service (using qiskit-ibm-runtime or otherwise), or which version of the client SDK you use.
+
+### 3 February 2025
+
+Pulse-level control on all IBM Quantum processors has been removed.  Additionally, the pulse module is scheduled for removal in Qiskit SDK v2.0.  Instead, you can use fractional gates that are now built into the Instruction Set Architecture (ISA). For full details and help migrating your code, refer to [Migrate from Qiskit Pulse to fractional gates.](/migration-guides/pulse-migration)
+
+### 2 February 2025
+
+Starting 2 June 2025 and continuing through the year, IBM Quantum will begin a gradual rollout of new features to [dynamic circuits](/guides/classical-feedforward-and-control-flow) that will enable them at the utility scale.
+Improvements include the following:
+
+- A 75x speedup in execution by using the [Gen3 engine stack](/guides/runtime-options-overview#experimental-option-note)
+- Parallel execution of branches, which reduces circuit duration and improves result quality
+- Improvement in mid-circuit measurement
+- Better integration with dynamical decoupling
+- More visibility of circuit timing information
+
+To accelerate the rollout, the following capabilities are now deprecated and will be no longer supported on or around 2 June 2025:
+
+- The `while`, `for`, and `switch` control flow constructs
+- The ability to use control flow instructions inside the body of a branch (as in, nested control flow)
+- Conditional measurements
+
+
+### 7 January 2025
+
+The rollout of the Gen3 engine stack begins today. This engine stack gives a 75x speedup in execution.  The rollout will be done on one QPU at a time, where a percentage of the jobs on the QPU will use the Gen3 path.  You can also force the Gen3 path using the [`gen3-turbo` experimental option.](/guides/runtime-options-overview#available-options) Note that this engine stack is not compatible with fractional gates, pulse gates, or dynamic circuits.
+
+### 15 October 2024
+
+Support for `backend.run` has ended. See the appropriate [migration guide](/migration-guides/qiskit-runtime) if you have not yet migrated to using primitives.
+
+### 1 October 2024
+
+Parameterized delay gates have been deprecated.
 
 ### 15 August 2024
 
