--- a/docs/guides/upgrade-from-open.mdx
+++ b/docs/guides/upgrade-from-open.mdx
@@ -44,7 +44,7 @@ To use your IBM Cloud Standard Plan, create a new [instance](./instances) and as
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-  -  [Manage Standard Plan cost](manage-cost)
+  -  [Manage cost](manage-cost) when using the Standard Plan.
   -  Learn about the available [plans.](plans-overview)
   -  Follow the steps in [Hello world](hello-world) to write and run a quantum program.
   -  [Get started with IBM Quantum on Cloud.](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-get-started)
