--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -155,7 +155,7 @@ Scroll to see the full table.
 
 <span id="experimental-option-note"></span>
 <Admonition type="note">
-Setting `gen3-turbo` enables the next-generation execution path, which provides a great improvement in performance. This option is experimental (subject to change without notice, and stability is not guaranteed) and is only available on `ibm_brisbane`, `ibm_brussels`, `ibm_fez`, `ibm_marrakesh`, `ibm_strasbourg`, and `ibm_torino`.
+Setting `gen3-turbo` enables the next-generation execution path, which provides a great improvement in performance. This option is experimental (subject to change without notice, and stability is not guaranteed).
 </Admonition>
 <span id="options-compatibility-table"></span>
 ### Feature compatibility
