start adding to new plans topic

--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -1,5 +1,28 @@
 ---
 title: Overview of plans
-description: Overview of the available plans; Standard and Open
+description: Overview of the available plans; Standard, Premium, and Open
 platform: cloud
 ---
+
+<span id="cloud-plans"></span>
+# Overview of available plans
+
+<Admonition type="note">
+This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/setup-channel#ibm-cloud)
+</Admonition>
+
+IBM Quantum Platform has Open (free access) and Premium (enterprise subscription) plans, as described below. See [IBM Quantum access plans](https://www.ibm.com/quantum/access-plans) for full details.
+
+- **Premium Plan** - Run quantum circuits on the world's best QPUs using an enterprise quantum time subscription.
+- **Standard (Pay-as-you-go) Plan** - Run quantum circuits on the world's best QPUs and pay only for the quantum time you use.
+- **Open Plan**: Run your quantum circuits on the world's best QPUs for free (up to 10 minutes quantum time per month).
+   <Admonition type="note">
+   During early access, users on the Open Plan get 10 minutes per 28-day period.
+   </Admonition>
+- **Dedicated Service** -
+
+## Next steps
+
+<Admonition type="tip" title="Recommendations">
+  -  Understand what counts as [usage.](estimate-job-run-time)
+</Admonition>
