--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -17,10 +17,10 @@ Keep up with the latest and greatest from Qiskit and IBM Quantum&reg;!
 For all product announcements, visit the [Announcements](https://docs.quantum.ibm.com/announcements/product-updates) page on IBM Quantum Platform Classic.
 
 <CloudContent>
-Jump to [IBM Quantum Platform](#latest-platform) | [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime Client](#latest-qiskit-runtime) | [Qiskit Runtime Service](#latest-runtime-service) | [Qiskit Transpiler Service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
+Jump to [IBM Quantum Platform](#latest-platform) | [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiskit-runtime) | [Qiskit Runtime service](#latest-runtime-service) | [Qiskit Transpiler Service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
 </CloudContent>
 <LegacyContent>
-Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime Client](#latest-qiskit-runtime) | [Qiskit Runtime Service](#latest-runtime-service) | [Qiskit Transpiler Service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
+Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiskit-runtime) | [Qiskit Runtime service](#latest-runtime-service) | [Qiskit Transpiler service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
 </LegacyContent>
 
 <CloudContent>
