--- a/docs/guides/serverless-port-code.mdx
+++ b/docs/guides/serverless-port-code.mdx
@@ -34,7 +34,7 @@ qc_random = [(random_circuit(20, 20, measure=True)) for _ in range(30)]
 optimization_level = 3
 
 service = QiskitRuntimeService()
-backend = service.get_backend(backend_name)
+backend = service.backend(backend_name)
 
 pass_manager = generate_preset_pass_manager(
     optimization_level=optimization_level, backend=backend
@@ -50,7 +50,7 @@ def transpile_parallel(circuit, pass_manager):
 
 transpiled_circuits = [
     transpile_parallel(circuit, pass_manager)
-    for circuit in circuits
+    for circuit in qc_random
 ]
 
 print(transpiled_circuits)
