Apply suggestions from code review

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -33,7 +33,7 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 
 - Cost limits for Standard Plan
   
-  - Standard Plan users with sufficient access can now view and edit maximum cost limits for their instances. Refer to the [documentation](/guides/upgrade-from-open#set-the-maximum-cost-limit) for more information.
+  - Standard Plan users with sufficient access can now view and edit [maximum cost limits](/guides/upgrade-from-open#set-the-maximum-cost-limit) for their instances.
 
 - Job management updates
 
