--- a/docs/api/qiskit-c/qk-bit-term.mdx
+++ b/docs/api/qiskit-c/qk-bit-term.mdx
@@ -121,7 +121,7 @@ This is a group of functions for interacting with an opaque (Rust-space) BitTerm
 
   <span id="group___qk_bit_term_1autotoc_md47" />
 
-  The behavior is undefined if `bit_term` is not a valid `uint8_t` value of a \[BitTerm].
+  The behavior is undefined if `bit_term` is not a valid `uint8_t` value of a [QkBitTerm](/api/qiskit-c/2.0/qk-bit-term#qkbitterm-1).
 
   **Parameters**
 
