--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -179,6 +179,11 @@ On the Standard Plan, you can set up spending notifications to get notified when
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
+<LegacyContent>
     - Review the [Qiskit Runtime plans](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-plans) available on IBM Cloud.
+    </LegacyContent>
+    <CloudContent>
+    - Review the [plans](plans-overview) available to IBM Quantum users.
+    </CloudContent>
     - Review suggestions to [minimize job quantum time.](minimize-time)
 </Admonition>
