--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -13,16 +13,15 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 
 IBM Quantum Platform has Open (free access) and Premium (enterprise subscription) plans, as described below. See [IBM Quantum access plans](https://www.ibm.com/quantum/access-plans) for full details.
 
-- **Premium Plan** - Run quantum circuits on the world's best QPUs using an enterprise quantum time subscription.
 - **Standard (Pay-as-you-go) Plan** - Run quantum circuits on the world's best QPUs and pay only for the quantum time you use.
-- **Open Plan**: Run your quantum circuits on the world's best QPUs for free (up to 10 minutes quantum time per month).
-   <Admonition type="note">
-   During early access, users on the Open Plan get 10 minutes per 28-day period.
-   </Admonition>
-- **Dedicated Service** -
+- **Open Plan**: Run your quantum circuits on the world's best QPUs for free (up to 10 minutes quantum time per 28-day rolling window). You can track your usage on the [Platform dashboard](https://quantum.cloud.ibm.com/) and the [Workloads](https://quantum.cloud.ibm.com/workloads) pages.
+- **Premium Plan** - Run quantum circuits on the world's best QPUs using an enterprise quantum time subscription. Additionally, some functionality, such as [Qiskit Functions](functions) and [Qiskit Transpiler as a Service](iskit-transpiler-service),  is available only to Premium Plan users.
 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
   -  Understand what counts as [usage.](estimate-job-run-time)
+  -  Learn about the [fair-share scheduler](fair-share-scheduler)
 </Admonition>
+
+
