Regen APIs with Julien's new docs

--- a/docs/api/qiskit-c/exit-codes.mdx
+++ b/docs/api/qiskit-c/exit-codes.mdx
@@ -21,30 +21,44 @@ This page documents the `ExitCode` enum.
 
   #### enumerator ExitCode\_Success
 
-  <Attribute id="ExitCode_Success" />
+  <Attribute id="ExitCode_Success">
+    Success.
+  </Attribute>
 
   #### enumerator ExitCode\_CInputError
 
-  <Attribute id="ExitCode_CInputError" />
+  <Attribute id="ExitCode_CInputError">
+    Error related to data input.
+  </Attribute>
 
   #### enumerator ExitCode\_NullPointerError
 
-  <Attribute id="ExitCode_NullPointerError" />
+  <Attribute id="ExitCode_NullPointerError">
+    Unexpected null pointer.
+  </Attribute>
 
   #### enumerator ExitCode\_AlignmentError
 
-  <Attribute id="ExitCode_AlignmentError" />
+  <Attribute id="ExitCode_AlignmentError">
+    Pointer is not aligned to expected data.
+  </Attribute>
 
   #### enumerator ExitCode\_IndexError
 
-  <Attribute id="ExitCode_IndexError" />
+  <Attribute id="ExitCode_IndexError">
+    Index out of bounds.
+  </Attribute>
 
   #### enumerator ExitCode\_ArithmeticError
 
-  <Attribute id="ExitCode_ArithmeticError" />
+  <Attribute id="ExitCode_ArithmeticError">
+    Error related to arithmetic operations or similar.
+  </Attribute>
 
   #### enumerator ExitCode\_MismatchedQubits
 
-  <Attribute id="ExitCode_MismatchedQubits" />
+  <Attribute id="ExitCode_MismatchedQubits">
+    Mismatching number of qubits.
+  </Attribute>
 </Class>
 
