--- a/docs/api/qiskit-c/qk-obs-term.mdx
+++ b/docs/api/qiskit-c/qk-obs-term.mdx
@@ -31,13 +31,13 @@ This is a group of functions for interacting with an opaque (Rust-space) SparseT
   #### QkComplex64 coeff
 
   <Attribute id="coeff">
-    The coefficient of the observable term
+    The coefficient of the observable term.
   </Attribute>
 
   #### uintptr\_t len
 
   <Attribute id="len">
-    Length of `bit_terms` and `indices` arrays
+    Length of the `bit_terms` and `indices` arrays.
   </Attribute>
 
   #### QkBitTerm \*bit\_terms
@@ -55,13 +55,9 @@ This is a group of functions for interacting with an opaque (Rust-space) SparseT
   #### uint32\_t num\_qubits
 
   <Attribute id="num_qubits">
-    The number of qubits of the observable term
+    The number of qubits the observable term is defined on.
   </Attribute>
 </Class>
-
-<Admonition title="Warning" type="caution">
-  doxygentypedef: Cannot find typedef “CSparseObservable” in doxygen xml output for project “qiskit” from directory: xml/
-</Admonition>
 
 ## Functions
 
