Pull in formatting fixes

--- a/docs/api/qiskit-c/qk-obs-term.mdx
+++ b/docs/api/qiskit-c/qk-obs-term.mdx
@@ -15,7 +15,7 @@ This is a group of functions for interacting with an opaque (Rust-space) SparseT
 ### QkObsTerm
 
 <Class id="QkObsTerm" signature="struct QkObsTerm">
-  A term in a [QkObs](/api/qiskit-c/2.0/qk-obs#qkobs-1).
+  A term in a \[SparseObservable].
 
   This contains the coefficient (`coeff`), the number of qubits of the observable (`num_qubits`) and pointers to the `bit_terms` and `indices` arrays, which have length `len`. It’s the responsibility of the user that the data is coherent, see also the below section on safety.
 
