--- a/docs/api/qiskit-c/qk-obs.mdx
+++ b/docs/api/qiskit-c/qk-obs.mdx
@@ -53,19 +53,20 @@ Due to allowing both the Paulis and their projectors, the allowed alphabet forms
 
 ## Representation
 
-The internal representation of a `QkObs` stores only the non-identity qubit operators. This makes it significantly more efficient to represent observables such as $\sum_{n\in \text{qubits}} Z^{(n)}$; `QkObs` requires an amount of memory linear in the total number of qubits. The terms are stored compressed, similar in spirit to the compressed sparse row format of sparse matrices. In this analogy, the terms of the sum are the “rows”, and the qubit terms are the “columns”, where an absent entry represents the identity rather than a zero. More explicitly, the representation is made up of four contiguous arrays: .. \_sparse-observable-arrays: .. table:: Data arrays used to represent `QkObs`
+The internal representation of a `QkObs` stores only the non-identity qubit operators. This makes it significantly more efficient to represent observables such as $\sum_{n\in \text{qubits}} Z^{(n)}$; `QkObs` requires an amount of memory linear in the total number of qubits. The terms are stored compressed, similar in spirit to the compressed sparse row format of sparse matrices. In this analogy, the terms of the sum are the “rows”, and the qubit terms are the “columns”, where an absent entry represents the identity rather than a zero. More explicitly, the representation is made up of four contiguous arrays:
 
-> | Attribute accessible by | Length | Description                                                                                                                                                                                                                                                                                                                                                                                |
-> | ----------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-> | `qk_obs_coeffs`         | $t$    | The complex scalar multiplier for each term.                                                                                                                                                                                                                                                                                                                                               |
-> | `qk_obs_bit_terms`      | $s$    | Each of the non-identity single-qubit terms for all of the operators, in order. These correspond to the non-identity $A^{(n)}_i$ in the sum description, where the entries are stored in order of increasing $i$ first, and in order of increasing $n$ within each term.                                                                                                                   |
-> | `qk_obs_indices`        | $s$    | The corresponding qubit ($n$) for each of the bit terms. `QkObs` requires that this list is term-wise sorted, and algorithms can rely on this invariant being upheld.                                                                                                                                                                                                                      |
-> | `qk_obs_boundaries`     | $t+1$  | The indices that partition the bit terms and indices into complete terms. For term number $i$, its complex coefficient is stored at index `i`, and its non-identity single-qubit operators and their corresponding qubits are in the range `[boundaries[i], boundaries[i+1])` in the bit terms and indices, respectively. The boundaries always have an explicit 0 as their first element. |
+<span id="sparse-observable-arrays" />
 
-The length parameter $t$ is the number of terms in the sum and can be queried using `qk_obs_num_terms`. The parameter $s$ is the total number of non-identity single-qubit terms and can be queried using `qk_obs_len`. As illustrative examples: \* in the case of a zero operator, the boundaries are length 1 (a single 0) and all other
+| Attribute accessible by | Length | Description                                                                                                                                                                                                                                                                                                                                                                                |
+| ----------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| `qk_obs_coeffs`         | $t$    | The complex scalar multiplier for each term.                                                                                                                                                                                                                                                                                                                                               |
+| `qk_obs_bit_terms`      | $s$    | Each of the non-identity single-qubit terms for all of the operators, in order. These correspond to the non-identity $A^{(n)}_i$ in the sum description, where the entries are stored in order of increasing $i$ first, and in order of increasing $n$ within each term.                                                                                                                   |
+| `qk_obs_indices`        | $s$    | The corresponding qubit ($n$) for each of the bit terms. `QkObs` requires that this list is term-wise sorted, and algorithms can rely on this invariant being upheld.                                                                                                                                                                                                                      |
+| `qk_obs_boundaries`     | $t+1$  | The indices that partition the bit terms and indices into complete terms. For term number $i$, its complex coefficient is stored at index `i`, and its non-identity single-qubit operators and their corresponding qubits are in the range `[boundaries[i], boundaries[i+1])` in the bit terms and indices, respectively. The boundaries always have an explicit 0 as their first element. |
 
-> vectors are empty.
+The length parameter $t$ is the number of terms in the sum and can be queried using `qk_obs_num_terms`. The parameter $s$ is the total number of non-identity single-qubit terms and can be queried using `qk_obs_len`. As illustrative examples:
 
+*   in the case of a zero operator, the boundaries are length 1 (a single 0) and all other vectors are empty.
 *   in the case of a fully simplified identity operator, the boundaries are `{0, 0}`, the coefficients have a single entry, and both the bit terms and indices are empty.
 *   for the operator $Z_2 Z_0 - X_3 Y_1$, the boundaries are `{0, 2, 4}`, the coeffs are `{1.0, -1.0}`, the bit terms are `[BitTerm.Z, BitTerm.Z, BitTerm.Y, BitTerm.X]` and the indices are `{0, 2, 1, 3}`. The operator might act on more than four qubits, depending on the the number of qubits (see `qk_obs_num_qubits`). Note that the single-bit terms and indices are sorted into termwise sorted order.
 
@@ -126,15 +127,19 @@ for (size_t i = 0; i < num_terms; i++) {
 
 <span id="sparse-observable-constructors" />
 
-| Function          | Summary                                                                                                             |
-| ----------------- | ------------------------------------------------------------------------------------------------------------------- |
-| `qk_obs_zero`     | Construct an empty observable on a given number of qubits.                                                          |
-| `qk_obs_identity` | Construct the identity observable on a given number of qubits.                                                      |
-| `qk_obs_new`      | Construct an observable from [the raw data arrays](qiskit-quantum-info-sparse-observable#sparse-observable-arrays). |
+| Function          | Summary                                                                        |
+| ----------------- | ------------------------------------------------------------------------------ |
+| `qk_obs_zero`     | Construct an empty observable on a given number of qubits.                     |
+| `qk_obs_identity` | Construct the identity observable on a given number of qubits.                 |
+| `qk_obs_new`      | Construct an observable from [the raw data arrays](#sparse-observable-arrays). |
 
 ## Mathematical manipulation
 
-`QkObs` supports fundamental arithmetic operations in between observables or with scalars. You can: \* add two observables using `qk_obs_add` \* multiply by a complex number with `qk_obs_multiply` \* compose (multiply) two observables via `qk_obs_compose` and `qk_obs_compose_map`
+`QkObs` supports fundamental arithmetic operations in between observables or with scalars. You can:
+
+*   add two observables using `qk_obs_add`
+*   multiply by a complex number with `qk_obs_multiply`
+*   compose (multiply) two observables via `qk_obs_compose` and `qk_obs_compose_map`
 
 ## Functions
 
@@ -255,7 +260,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
   <span id="group___qk_obs_1autotoc_md8" />
 
-  Behavior is undefined if `obs` is not either null or a valid pointer to a [QkObs](/api/qiskit-c/2.0/qk-obs#qkobs-1).
+  Behavior is undefined if `obs` is not either null or a valid pointer to a \[SparseObservable].
 
   **Parameters**
 
@@ -309,7 +314,7 @@ for (size_t i = 0; i < num_terms; i++) {
 <Function id="qk_obs_term" signature="ExitCode qk_obs_term(QkObs *obs, uint64_t index, QkObsTerm *out)">
   Get an observable term by reference.
 
-  A [QkObsTerm](/api/qiskit-c/2.0/qk-obs-term#qkobsterm-1) contains pointers to the indices and bit terms in the term, which can be used to modify the internal data of the observable. This can leave the observable in an incoherent state and should be avoided, unless great care is taken. It is generally safer to construct a new observable instead of attempting in-place modifications.
+  A \[CSparseTerm] contains pointers to the indices and bit terms in the term, which can be used to modify the internal data of the observable. This can leave the observable in an incoherent state and should be avoided, unless great care is taken. It is generally safer to construct a new observable instead of attempting in-place modifications.
 
   <span id="group___qk_obs_1autotoc_md11" />
 
@@ -338,7 +343,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
   *   **obs** – A pointer to the observable.
   *   **index** – The index of the term to get.
-  *   **out** – A pointer to a [QkObsTerm](/api/qiskit-c/2.0/qk-obs-term#qkobsterm-1) used to return the observable term.
+  *   **out** – A pointer to a \[CSparseTerm] used to return the observable term.
 
   **Returns**
 
