--- a/docs/api/qiskit-c/index.mdx
+++ b/docs/api/qiskit-c/index.mdx
@@ -21,5 +21,5 @@ As this interface is still new in Qiskit it should be considered experimental an
 *   [QkObs](qk-obs)
 *   [QkObsTerm](qk-obs-term)
 *   [QkBitTerm](qk-bit-term)
-*   [Exit codes](exit-codes)
+*   [QkExitCode](qk-exit-code)
 
