--- a/docs/api/qiskit-c/qk-bit-term.mdx
+++ b/docs/api/qiskit-c/qk-bit-term.mdx
@@ -14,61 +14,61 @@ enum QkBitTerm
 
 An enum that to represent each of the single-qubit alphabet terms enumerated below.
 
-## Members
+## Values
 
-*   ****enumerator QkBitTerm\_X****
-
-    Value: 2 (`0b0010`)
+*   **`QkBitTerm_X`**
 
     The Pauli $X$ operator.
 
-*   ****enumerator QkBitTerm\_Y****
+    Value: 2 (`0b0010`)
 
-    Value: 3 (`0b0011`)
+*   **`QkBitTerm_Y`**
 
     The Pauli $Y$ operator.
 
-*   ****enumerator QkBitTerm\_Z****
+    Value: 3 (`0b0011`)
 
-    Value: 1 (`0b0001`)
+*   **`QkBitTerm_Z`**
 
     The Pauli $Z$ operator.
 
-*   ****enumerator QkBitTerm\_Plus****
+    Value: 1 (`0b0001`)
 
-    Value: 10 (`0b1010`)
+*   **`QkBitTerm_Plus`**
 
     The projector $\lvert +\rangle\langle +\rvert$ to the positive $X$ eigenstate.
 
-*   ****enumerator QkBitTerm\_Minus****
+    Value: 10 (`0b1010`)
+
+*   **`QkBitTerm_Minus`**
+
+    The projector $\lvert -\rangle\langle -\rvert$ to the negative $X$ eigenstate.
 
     Value: 6 (`0b0110`)
 
-    The projector $\lvert -\rangle\langle -\rvert$ to the negative $X$ eigenstate.]
-
-*   ****enumerator QkBitTerm\_Right****
-
-    Value: 11 (`0b1011`)
+*   **`QkBitTerm_Right`**
 
     The projector $\lvert r\rangle\langle r\rvert$ to the positive $Y$ eigenstate.
 
-*   ****enumerator QkBitTerm\_Left****
+    Value: 11 (`0b1011`)
 
-    Value: 7 (`0b1011`)
+*   **`QkBitTerm_Left`**
 
     The projector $\lvert l\rangle\langle l\rvert$ to the negative $Y$ eigenstate.
 
-*   ****enumerator QkBitTerm\_Zero****
+    Value: 7 (`0b1011`)
 
-    Value: 9 (`0b1001`)
+*   **`QkBitTerm_Zero`**
 
     The projector $\lvert 0\rangle\langle 0\rvert$ to the positive $Z$ eigenstate.
 
-*   ****enumerator QkBitTerm\_One****
+    Value: 9 (`0b1001`)
 
-    Value: 5 (`0b0101`)
+*   **`QkBitTerm_One`**
 
     The projector $\lvert 1\rangle\langle 1\rvert$ to the negative $Z$ eigenstate.
+
+    Value: 5 (`0b0101`)
 
 ## Representation
 
