--- a/docs/api/qiskit-c/qk-obs.mdx
+++ b/docs/api/qiskit-c/qk-obs.mdx
@@ -26,26 +26,20 @@ $$
 
 for complex numbers $c_i$ and single-qubit operators acting on qubit $n$ from a restricted alphabet $A^{(n)}_i$. The sum over $i$ is the sum of the individual terms, and the tensor product produces the operator strings. The alphabet of allowed single-qubit operators that the $A^{(n)}_i$ are drawn from is the Pauli operators and the Pauli-eigenstate projection operators. Explicitly, these are:
 
-<span id="sparse-observable-alphabet" />
+<span id="qkobs-alphabet" />
 
-| Operator                                | `QkBitTerm`       | Numeric value |
-| --------------------------------------- | ----------------- | ------------- |
-| $I$ (identity)                          | Not stored.       | Not stored.   |
-| $X$ (Pauli X)                           | `QkBitTerm_X`     | `0b0010` (2)  |
-| $Y$ (Pauli Y)                           | `QkBitTerm_Y`     | `0b0011` (3)  |
-| $Z$ (Pauli Z)                           | `QkBitTerm_Z`     | `0b0001` (1)  |
-| $\lvert+\rangle\langle+\rvert$          | `QkBitTerm_Plus`  | `0b1010` (10) |
-| (projector to positive eigenstate of X) |                   |               |
-| $\lvert-\rangle\langle-\rvert$          | `QkBitTerm_Minus` | `0b0110` (6)  |
-| (projector to negative eigenstate of X) |                   |               |
-| $\lvert r\rangle\langle r\rvert$        | `QkBitTerm_Right` | `0b1011` (11) |
-| (projector to positive eigenstate of Y) |                   |               |
-| $\lvert l\rangle\langle l\rvert$        | `QkBitTerm_Left`  | `0b0111` (7)  |
-| (projector to negative eigenstate of Y) |                   |               |
-| $\lvert0\rangle\langle0\rvert$          | `QkBitTerm_Zero`  | `0b1001` (9)  |
-| (projector to positive eigenstate of Z) |                   |               |
-| $\lvert1\rangle\langle1\rvert$          | `QkBitTerm_One`   | `0b0101` (5)  |
-| (projector to negative eigenstate of Z) |                   |               |
+| Operator                                                                 | `QkBitTerm`       | Numeric value |
+| ------------------------------------------------------------------------ | ----------------- | ------------- |
+| $I$ (identity)                                                           | Not stored.       | Not stored.   |
+| $X$ (Pauli X)                                                            | `QkBitTerm_X`     | `0b0010` (2)  |
+| $Y$ (Pauli Y)                                                            | `QkBitTerm_Y`     | `0b0011` (3)  |
+| $Z$ (Pauli Z)                                                            | `QkBitTerm_Z`     | `0b0001` (1)  |
+| $\lvert+\rangle\langle+\rvert$ (projector to positive eigenstate of X)   | `QkBitTerm_Plus`  | `0b1010` (10) |
+| $\lvert-\rangle\langle-\rvert$ (projector to negative eigenstate of X)   | `QkBitTerm_Minus` | `0b0110` (6)  |
+| $\lvert r\rangle\langle r\rvert$ (projector to positive eigenstate of Y) | `QkBitTerm_Right` | `0b1011` (11) |
+| $\lvert l\rangle\langle l\rvert$ (projector to negative eigenstate of Y) | `QkBitTerm_Left`  | `0b0111` (7)  |
+| $\lvert0\rangle\langle0\rvert$ (projector to positive eigenstate of Z)   | `QkBitTerm_Zero`  | `0b1001` (9)  |
+| $\lvert1\rangle\langle1\rvert$ (projector to negative eigenstate of Z)   | `QkBitTerm_One`   | `0b0101` (5)  |
 
 Due to allowing both the Paulis and their projectors, the allowed alphabet forms an overcomplete basis of the operator space. This means that there is not a unique summation to represent a given observable. As a consequence, comparison requires additional care and using `qk_obs_canonicalize` on two mathematically equivalent observables might not result in the same representation.
 
@@ -55,7 +49,7 @@ Due to allowing both the Paulis and their projectors, the allowed alphabet forms
 
 The internal representation of a `QkObs` stores only the non-identity qubit operators. This makes it significantly more efficient to represent observables such as $\sum_{n\in \text{qubits}} Z^{(n)}$; `QkObs` requires an amount of memory linear in the total number of qubits. The terms are stored compressed, similar in spirit to the compressed sparse row format of sparse matrices. In this analogy, the terms of the sum are the “rows”, and the qubit terms are the “columns”, where an absent entry represents the identity rather than a zero. More explicitly, the representation is made up of four contiguous arrays:
 
-<span id="sparse-observable-arrays" />
+<span id="qkobs-arrays" />
 
 | Attribute accessible by | Length | Description                                                                                                                                                                                                                                                                                                                                                                                |
 | ----------------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
@@ -64,11 +58,13 @@ The internal representation of a `QkObs` stores only the non-identity qubit oper
 | `qk_obs_indices`        | $s$    | The corresponding qubit ($n$) for each of the bit terms. `QkObs` requires that this list is term-wise sorted, and algorithms can rely on this invariant being upheld.                                                                                                                                                                                                                      |
 | `qk_obs_boundaries`     | $t+1$  | The indices that partition the bit terms and indices into complete terms. For term number $i$, its complex coefficient is stored at index `i`, and its non-identity single-qubit operators and their corresponding qubits are in the range `[boundaries[i], boundaries[i+1])` in the bit terms and indices, respectively. The boundaries always have an explicit 0 as their first element. |
 
-The length parameter $t$ is the number of terms in the sum and can be queried using `qk_obs_num_terms`. The parameter $s$ is the total number of non-identity single-qubit terms and can be queried using `qk_obs_len`. As illustrative examples:
+The length parameter $t$ is the number of terms in the sum and can be queried using `qk_obs_num_terms`. The parameter $s$ is the total number of non-identity single-qubit terms and can be queried using `qk_obs_len`.
+
+As illustrative examples:
 
 *   in the case of a zero operator, the boundaries are length 1 (a single 0) and all other vectors are empty.
 *   in the case of a fully simplified identity operator, the boundaries are `{0, 0}`, the coefficients have a single entry, and both the bit terms and indices are empty.
-*   for the operator $Z_2 Z_0 - X_3 Y_1$, the boundaries are `{0, 2, 4}`, the coeffs are `{1.0, -1.0}`, the bit terms are `[BitTerm.Z, BitTerm.Z, BitTerm.Y, BitTerm.X]` and the indices are `{0, 2, 1, 3}`. The operator might act on more than four qubits, depending on the the number of qubits (see `qk_obs_num_qubits`). Note that the single-bit terms and indices are sorted into termwise sorted order.
+*   for the operator $Z_2 Z_0 - X_3 Y_1$, the boundaries are `{0, 2, 4}`, the coeffs are `{1.0, -1.0}`, the bit terms are `{QkBitTerm_Z, QkBitTerm_Z, QkBitTerm_Y, QkBitTerm_X}` and the indices are `{0, 2, 1, 3}`. The operator might act on more than four qubits, depending on the the number of qubits (see `qk_obs_num_qubits`). Note that the single-bit terms and indices are sorted into termwise sorted order.
 
 These cases are not special, they’re fully consistent with the rules and should not need special handling.
 
@@ -125,13 +121,13 @@ for (size_t i = 0; i < num_terms; i++) {
 
 `QkObs` can be constructed by initializing an empty observable (with `qk_obs_zero`) and iteratively adding terms (with `qk_obs_add_term`). Alternatively, an observable can be constructed from “raw” data (with `qk_obs_new`) if all internal data is specified. This requires care to ensure the data is coherent and results in a valid observable.
 
-<span id="sparse-observable-constructors" />
+<span id="qkobs-constructors" />
 
-| Function          | Summary                                                                        |
-| ----------------- | ------------------------------------------------------------------------------ |
-| `qk_obs_zero`     | Construct an empty observable on a given number of qubits.                     |
-| `qk_obs_identity` | Construct the identity observable on a given number of qubits.                 |
-| `qk_obs_new`      | Construct an observable from [the raw data arrays](#sparse-observable-arrays). |
+| Function          | Summary                                                            |
+| ----------------- | ------------------------------------------------------------------ |
+| `qk_obs_zero`     | Construct an empty observable on a given number of qubits.         |
+| `qk_obs_identity` | Construct the identity observable on a given number of qubits.     |
+| `qk_obs_new`      | Construct an observable from [the raw data arrays](#qkobs-arrays). |
 
 ## Mathematical manipulation
 
@@ -260,7 +256,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
   <span id="group___qk_obs_1autotoc_md8" />
 
-  Behavior is undefined if `obs` is not either null or a valid pointer to a \[SparseObservable].
+  Behavior is undefined if `obs` is not either null or a valid pointer to a `QkObs`.
 
   **Parameters**
 
@@ -314,7 +310,7 @@ for (size_t i = 0; i < num_terms; i++) {
 <Function id="qk_obs_term" signature="ExitCode qk_obs_term(QkObs *obs, uint64_t index, QkObsTerm *out)">
   Get an observable term by reference.
 
-  A \[CSparseTerm] contains pointers to the indices and bit terms in the term, which can be used to modify the internal data of the observable. This can leave the observable in an incoherent state and should be avoided, unless great care is taken. It is generally safer to construct a new observable instead of attempting in-place modifications.
+  A `QkObsTerm` contains pointers to the indices and bit terms in the term, which can be used to modify the internal data of the observable. This can leave the observable in an incoherent state and should be avoided, unless great care is taken. It is generally safer to construct a new observable instead of attempting in-place modifications.
 
   <span id="group___qk_obs_1autotoc_md11" />
 
@@ -343,7 +339,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
   *   **obs** – A pointer to the observable.
   *   **index** – The index of the term to get.
-  *   **out** – A pointer to a \[CSparseTerm] used to return the observable term.
+  *   **out** – A pointer to a `QkObsTerm` used to return the observable term.
 
   **Returns**
 
@@ -860,7 +856,7 @@ for (size_t i = 0; i < num_terms; i++) {
 ### qk\_obs\_str
 
 <Function id="qk_obs_str" signature="char *qk_obs_str(const QkObs *obs)">
-  Return a string representation of a `SparseObservable`.
+  Return a string representation of a `QkObs`.
 
   <span id="group___qk_obs_1autotoc_md41" />
 
@@ -886,7 +882,7 @@ for (size_t i = 0; i < num_terms; i++) {
 
   **Parameters**
 
-  **obs** – A pointer to the `SparseObservable` to get the string for.
+  **obs** – A pointer to the `QkObs` to get the string for.
 
   **Returns**
 
