make bullets consistent w/ Figma

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -41,7 +41,7 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 
 - **Resolved inconsistent behavior due to caching** - Some inconsistent behavior seen when updating instance limits, tags, and QPU resources has been resolved, which was due to caching.
 
-- For full details on the early access release and upcoming improvements, [check out the blog.](https://www.ibm.com/quantum/blog/iqp-upgrade)
+For full details on the early access release and upcoming improvements, [check out the blog.](https://www.ibm.com/quantum/blog/iqp-upgrade)
 </CloudContent>
 
 <span id="latest-qiskit-sdk"></span>
@@ -55,7 +55,7 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 
 {/* use url format /api/qiskit/release-notes/X.X to link to the specific X.X version of the release notes */}
 
-- *To see the release notes for all versions, visit the [Qiskit SDK release notes](/api/qiskit/release-notes).*
+*To see the release notes for all versions, visit the [Qiskit SDK release notes](/api/qiskit/release-notes).*
 
 
 <span id="latest-qiskit-runtime"></span>
@@ -79,7 +79,7 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 
 {/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
 
-- *To see the release notes for all versions, visit the [Qiskit Runtime client release notes](/api/qiskit-ibm-runtime/release-notes).*
+*To see the release notes for all versions, visit the [Qiskit Runtime client release notes](/api/qiskit-ibm-runtime/release-notes).*
 
 <span id="latest-runtime-service"></span>
 ## Qiskit Runtime service
@@ -156,7 +156,7 @@ Improvements include the following:
 
 - See the [v0.11.0 release notes.](/api/qiskit-ibm-transpiler/release-notes#0110-2025-03-25)
 
-- *To see the release notes for all versions, visit the [Qiskit Transpiler Service client release notes](/api/qiskit-ibm-transpiler/release-notes).*
+*To see the release notes for all versions, visit the [Qiskit Transpiler Service client release notes](/api/qiskit-ibm-transpiler/release-notes).*
 
 <details>
 <summary><b>Previous updates</b></summary>
@@ -179,7 +179,7 @@ Improvements include the following:
   - [HI-VQE Chemistry - A Qiskit Function by Qunova Computing](/guides/qunova-chemistry)
 
 
-- To get started, explore the [Qiskit Functions documentation.](/guides/functions)
+To get started, explore the [Qiskit Functions documentation.](/guides/functions)
 
 <details>
 <summary><b>Previous updates</b></summary>
@@ -264,4 +264,4 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
   - The search bar is now bigger for increased discoverability, and your search query is preserved after you close the search modal.
   - All code examples have been updated to work with Qiskit SDK v1.3 and Qiskit Runtime v0.34.
 
-- *A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
+*A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
