--- a/docs/api/qiskit-c/qk-bit-term.mdx
+++ b/docs/api/qiskit-c/qk-bit-term.mdx
@@ -107,7 +107,7 @@ The numeric structure of these is that they are all four-bit values of which the
 
   <span id="group___qk_bit_term_1autotoc_md47" />
 
-  The behavior is undefined if `bit_term` is not a valid `uint8_t` value of a \[BitTerm].
+  The behavior is undefined if `bit_term` is not a valid `uint8_t` value of a `QkBitTerm`.
 
   **Parameters**
 
